--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contenedor-video">
         <video 
         class="video-presentacion"
-        src="./img/video_presentación.mp4" 
+        src="./audiovisual/video_presentación.mp4" 
         type="video/mp4"
         autoplay
         muted
@@ -78,7 +78,7 @@
         <div class="flor"></div>
 
         <div class="info-evento">
-            <h3>Información de Evento</h3>
+            <h3>Información del Evento</h3>
             <p>
                 <strong>Fecha</strong> 
                 <br>
@@ -100,10 +100,11 @@
                 <div class="icono-ubicacion"></div>
                 CÓMO LLEGAR</a>
 
-                <a href="">
+                <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Casamiento+Gabi+y+Dani&dates=20251213T190000/20251214T050000&details=Información+del+Evento%0A%0AFecha:+13+de+diciembre,+2025%0AHora:+19:00hs%0ALugar:+La+Araucaria+Eventos+-+Ruta+30+km+476,+Chivilcoy,+Provincia+de+Buenos+Aires,+Argentina%0A%0A¡Te+esperamos+en+nuestra+boda!&location=La+Araucaria,+Ruta+30+km+476,+Chivilcoy,+Provincia+de+Buenos+Aires,+Argentina" target="_blank">
                     <div class="icono-calendario"></div>
                     AGENDAR
                 </a>
+
             </div>
             
         </div>
@@ -138,7 +139,7 @@
         <div class="regalo" id="regalo">  
             <div class="flores-chicas-sup"></div>
 
-            <h2>Regalos</h2>
+            <div class="titulo-regalo"></div>
             <p>Nuestro mejor regalo es que puedas acompañarnos, pero si lo deseás, podés colaborar con nuestra luna de miel.</p>
             
             <div class="regalo-superior" id="tapa"></div>
@@ -191,7 +192,7 @@
 
             <video 
             class="video-ubicacion"
-            src="./img/video_araucaria.mp4" 
+            src="./audiovisual/video_araucaria.mp4" 
             type="video/mp4"
             autoplay
             muted
@@ -303,7 +304,7 @@
 
             <div class="icono-invitacion"></div>
             <p>Por favor, confirmanos si podés acompañarnos antes del 10/08/2026</p>
-            <a href="">Confirmar Asistencia</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSct-Lq2MnMlZbqx5SSSz6MMZvUjRbPE4cCBltnaWcKFe2KDBQ/viewform?usp=header" target="_blank">Confirmar Asistencia</a>
 
             <div class="flores-chicas-inf"></div>
         </div>
@@ -332,7 +333,7 @@
 
     <!-- AUDIO -->
     <audio id="musica" loop autoplay>
-        <source src="audio.mp3" type="audio/mp3">
+        <source src="./audiovisual/audio.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
     </audio>
 
