--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
         <div class="contenedor-asistencia sombra">
             <div class="flores-chicas-sup"></div>
 
+            <div class="titulo-asistencia"></div>
+
             <div class="icono-invitacion"></div>
             <p>Por favor, confirmanos si podés acompañarnos antes del 10/08/2026</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSct-Lq2MnMlZbqx5SSSz6MMZvUjRbPE4cCBltnaWcKFe2KDBQ/viewform?usp=header" target="_blank">Confirmar Asistencia</a>
