08 Correcciones en Diseño

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                 <div class="icono-ubicacion"></div>
                 CÓMO LLEGAR</a>
 
-                <a href="./audiovisual/casamiento.ics">
+                <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Casamiento+Gabi+y+Dani&dates=20251213T190000/20251213T230000&details=¡Te+esperamos+en+nuestra+boda!%0AFecha:+13+de+diciembre,+2025%0AHora:+19:00hs%0ALugar:+La+Araucaria,+Ruta+30+km+476,+Chivilcoy,+Provincia+de+Buenos+Aires,+Argentina&location=La+Araucaria,+Ruta+30+km+476,+Chivilcoy" target="_blank" rel="noopener noreferrer">
                     <div class="icono-calendario"></div>
                     AGENDAR
                 </a>
+
+
 
             </div>
             
