10 Corrección en el Audio

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </div>
 
     <!-- AUDIO -->
-    <audio id="musica" loop>
+    <audio id="musica" loop playsinline>
         <source src="./audiovisual/audio.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
     </audio>
